<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SignUpForm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok_button">OK</string>
    <string name="cancel">Cancel</string>
    <string name="submit_button">Submit</string>
    <string name="username">Username: </string>
    <string name="username_edit">Please enter your username</string>
    <string name="password">Password:</string>
    <string name="password_edit">Please enter your password</string>
    <string name="repeat_password">Repeat Password:</string>
    <string name="repeat_password_edit">Please repeat your password</string>
    <string name="randomString">Random</string>
</resources>
