<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/username_field"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/username"
            android:id="@+id/textView" />

        <EditText
            android:layout_weight="75"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:hint="@string/username_edit" />


    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/password"
            android:id="@+id/textViewPassword" />

        <EditText
            android:layout_weight="75"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPassword"
            android:hint="@string/password_edit" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/repeat_password"
            android:id="@+id/textViewRepeatPassword" />

        <EditText
            android:layout_weight="75"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextRepeatPassword"
            android:hint="@string/repeat_password_edit" />


    </LinearLayout>
    </LinearLayout>
      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/submit_button"
          android:text="@string/submit_button"
          android:layout_alignRight="@id/username_field"
          android:layout_below="@id/username_field"
          />

</RelativeLayout>
